--- a/keyOS/res/layout/activity_password.xml
+++ b/keyOS/res/layout/activity_password.xml
@@ -74,7 +74,7 @@
                             android:textColor="@android:color/black"
                             android:textSize="45dp"
                             android:id="@+id/heading"
-                            android:text="Create New"
+                            android:text="@string/create_new"
                             android:layout_height="wrap_content"/>
                         <TextView
                             android:layout_width="match_parent"
@@ -84,7 +84,7 @@
                             android:id="@+id/type"
                             android:layout_marginTop="5dp"
                             android:layout_marginLeft="3dp"
-                            android:text="Password"
+                            android:text="@string/password"
                             android:layout_height="wrap_content"/>
                     </LinearLayout>
 
@@ -95,7 +95,7 @@
                     android:paddingHorizontal="20dp"
                     app:counterOverflowTextColor="@color/buttonColor"
                     android:theme="@style/EditTextStyle"
-                    android:hint="Recovery Email"
+                    android:hint="@string/recovery_email"
                     android:layout_marginBottom="20dp"
                     android:id="@+id/emailLayout"
                     app:hintTextColor="@color/buttonColor"
@@ -116,7 +116,7 @@
                     android:paddingHorizontal="20dp"
                     app:counterOverflowTextColor="@color/buttonColor"
                     android:theme="@style/EditTextStyle"
-                    android:hint="Old Password"
+                    android:hint="@string/old_password"
                     android:layout_marginBottom="20dp"
                     android:id="@+id/oldPasswordLayout"
                     android:visibility="gone"
@@ -137,7 +137,7 @@
                     android:paddingHorizontal="20dp"
                     app:counterOverflowTextColor="@color/buttonColor"
                     android:theme="@style/EditTextStyle"
-                    android:hint="Password"
+                    android:hint="@string/password"
                     android:layout_marginBottom="20dp"
                     android:id="@+id/passwordLayout"
                     app:hintTextColor="@color/buttonColor"
@@ -158,7 +158,7 @@
                     android:paddingHorizontal="20dp"
                     app:counterOverflowTextColor="@color/buttonColor"
                     android:theme="@style/EditTextStyle"
-                    android:hint="Confirm password"
+                    android:hint="@string/confirm_password"
                     android:layout_marginBottom="20dp"
                     android:id="@+id/confirmPasswordLayout"
                     app:hintTextColor="@color/buttonColor"
@@ -220,7 +220,7 @@
                             android:clickable="true"
                             android:focusable="true"
                             android:gravity="center"
-                            android:text="Cancel"
+                            android:text="@string/cancel"
                             android:textStyle="bold" />
 
                     </RelativeLayout>
@@ -246,7 +246,7 @@
 
                         <TextView
                             android:layout_width="match_parent"
-                            android:text="Done"
+                            android:text="@string/done"
                             android:id="@+id/done"
                             android:gravity="center"
                             android:textColor="@android:color/white"
