--- a/keyOS/res/layout/activity_allow_apps.xml
+++ b/keyOS/res/layout/activity_allow_apps.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".Config.AllowApps">
+    >
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -114,7 +114,7 @@
                         android:layout_height="match_parent">
                         <TextView
                             android:layout_width="match_parent"
-                            android:text="Cancel"
+                            android:text="@string/cancel"
                             android:gravity="center"
                             android:id="@+id/cancel"
                             android:textStyle="bold"
@@ -141,7 +141,7 @@
 
                         <TextView
                             android:layout_width="match_parent"
-                            android:text="Done"
+                            android:text="@string/done"
                             android:id="@+id/done"
                             android:gravity="center"
                             android:background="@color/buttonColor"
