--- a/keyOS/res/layout/fragment_password_prompt_sheet.xml
+++ b/keyOS/res/layout/fragment_password_prompt_sheet.xml
@@ -28,7 +28,7 @@
             android:drawablePadding="20dp"
             android:drawableRight="@drawable/ic_info"
             android:drawableTint="@color/sb__text_color"
-            android:text="if you haven't change your password yet \nplease try 1234"
+            android:text="@string/if_you_haven_t_change_your_password_yet_nplease_try_1234"
             android:layout_marginBottom="20dp"
             android:layout_height="wrap_content"/>
         <FrameLayout
@@ -53,7 +53,7 @@
             android:layout_marginLeft="20dp"
             android:layout_width="match_parent"
             android:id="@+id/forget"
-            android:text="forget ?"
+            android:text="@string/forget"
             android:textColor="@color/icon_background"
             android:layout_height="wrap_content"/>
 
@@ -70,7 +70,7 @@
                 android:textColor="@color/white"
                 android:layout_alignParentRight="true"
                 android:layout_height="40dp"
-                android:text="DONE"
+                android:text="@string/done"
             />
         </RelativeLayout>
 
