--- a/keyOS/res/layout/fragment_user_agreement.xml
+++ b/keyOS/res/layout/fragment_user_agreement.xml
@@ -37,7 +37,7 @@
                 android:textSize="25dp"
                 android:layout_marginTop="30dp"
                 android:textColor="@color/black"
-                android:text="User Agreement"
+                android:text="@string/user_agreement"
                 android:layout_height="wrap_content"/>
 
             <LinearLayout
@@ -90,7 +90,7 @@
                 android:textSize="14dp"
                 android:layout_marginBottom="20dp"
                 android:layout_width="match_parent"
-                android:text="We will store the list of installed app and phone number in your device. This data will taken from your device only if you are using QrCode feature and this data will automatically removed from server with in one hour"
+                android:text="@string/we_will_store_the_list_of_installed_app_and_phone_number_in_your_device_this_data_will_taken_from_your_device_only_if_you_are_using_qrcode_feature_and_this_data_will_automatically_removed_from_server_with_in_one_hour"
                 android:layout_height="wrap_content"/>
             </LinearLayout>
 
@@ -105,7 +105,7 @@
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
-                android:text="No thanks"
+                android:text="@string/no_thanks"
                 android:id="@+id/exit"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -127,7 +127,7 @@
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:text="Accept &amp; continue"
+                        android:text="@string/accept_amp_continue"
                         android:id="@+id/acceptAndContinue"
                         android:gravity="center"
                         android:paddingHorizontal="20dp"
